--- a/ms-consolidacao/docker-compose.yaml
+++ b/ms-consolidacao/docker-compose.yaml
@@ -1,7 +1,7 @@
-version: '3'
+version: "3"
 
 services:
-  mysql: 
+  mysql:
     image: mysql:5.7
     restart: always
     environment:
@@ -10,6 +10,18 @@ services:
       MYSQL_PASSWORD: root
     ports:
       - "3306:3306"
+    extra_hosts:
+      - "host.docker.internal:172.17.0.1"
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    container_name: phpmyadmin_container
+    environment:
+      - PMA_USER=admin
+      - PMA_PASSWORD=admin
+    ports:
+      - 9090:80
+    restart: always
     extra_hosts:
       - "host.docker.internal:172.17.0.1"
 
@@ -44,7 +56,7 @@ services:
       - "9094:9094"
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT,OUTSIDE:PLAINTEXT
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://broker:29092,PLAINTEXT_HOST://localhost:9092,OUTSIDE://host.docker.internal:9094
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
@@ -53,8 +65,8 @@ services:
       KAFKA_CONFLUENT_BALANCER_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
-      CONFLUENT_METRICS_ENABLE: 'false'
-      CONFLUENT_SUPPORT_CUSTOMER_ID: 'anonymous'
+      CONFLUENT_METRICS_ENABLE: "false"
+      CONFLUENT_SUPPORT_CUSTOMER_ID: "anonymous"
 
   control-center:
     image: confluentinc/cp-enterprise-control-center:7.3.0
@@ -65,13 +77,13 @@ services:
     ports:
       - "9021:9021"
     environment:
-      CONTROL_CENTER_BOOTSTRAP_SERVERS: 'broker:29092'
+      CONTROL_CENTER_BOOTSTRAP_SERVERS: "broker:29092"
       CONTROL_CENTER_REPLICATION_FACTOR: 1
       CONTROL_CENTER_INTERNAL_TOPICS_PARTITIONS: 1
       CONTROL_CENTER_MONITORING_INTERCEPTOR_TOPIC_PARTITIONS: 1
       CONFLUENT_METRICS_TOPIC_REPLICATION: 1
       PORT: 9021
-  
+
   kafka-topics-generator:
     image: confluentinc/cp-server:7.3.0
     depends_on:
