⚡ General Update:  Refatoração no código do django

--- a/django/.env.example
+++ b/django/.env.example
@@ -1,4 +1,4 @@
-DEBUG=true
+DEBUG=1
 SECRET_KEY="django-insecure-d)4!!l8v0#uag-@(h0h$y7*$pcmtkl9oodd2d5gp*9@ntnm0%8"
 ALLOWED_HOSTS=*
 #DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
