--- a/django/Pipfile
+++ b/django/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django = "4.1.3"
 django-environ = "*"
 dj-database-url = "*"
+python-dotenv = "0.20.0"
 
 [dev-packages]
 autopep8 = "2.0.0"
