aula integração django, golang e next

--- a/django/.vscode/settings.json
+++ b/django/.vscode/settings.json
@@ -1,4 +1,25 @@
 {
     "python.defaultInterpreterPath": "/home/python/app/.venv/bin/python",
     "python.terminal.activateEnvironment": true,
+    "workbench.colorCustomizations": {
+        "activityBar.activeBackground": "#137751",
+        "activityBar.background": "#137751",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#ca91ed",
+        "activityBarBadge.foreground": "#15202b",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#137751",
+        "statusBar.background": "#137751",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#1aa36f",
+        "statusBarItem.remoteBackground": "#137751",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "tab.activeBorder": "#137751",
+        "titleBar.activeBackground": "#137751",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#13775199",
+        "titleBar.inactiveForeground": "#e7e7e799"
+    },
+    "peacock.remoteColor": "#0C4B33",
 }
