--- a/next/package.json
+++ b/next/package.json
@@ -17,9 +17,11 @@
     "@mui/material": "^5.10.16",
     "@next/font": "^13.0.6",
     "axios": "^1.2.1",
+    "date-fns": "^2.29.3",
     "next": "13.0.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
