chore: create a network standard to kafka server

--- a/kafka/docker-compose.yaml
+++ b/kafka/docker-compose.yaml
@@ -62,4 +62,6 @@ services:
         kafka-topics --create --topic=chooseTeam --if-not-exists --bootstrap-server=broker:29092 &&
         kafka-topics --create --topic=newAction --if-not-exists --bootstrap-server=broker:29092"
 
-  
+networks:
+  default:
+    name: imersao11
